k8s/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: test-aspnet-ingress
  namespace: test-aspnet
spec:
  rules:
  - host: app-rs2.luka-j.rocks
    http:
      paths:
      - backend:
          service:
            name: test-aspnet-service
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - app-rs2.luka-j.rocks
    secretName: test-aspnet-tls-secret
